[package]
  authors = { workspace = true }
  edition = { workspace = true }
  name    = "day-04"
  version = { workspace = true }

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  anyhow    = "1.0.66"
  itertools = "0.10.5"
  nom       = "7.1.1"
  utils     = { path = "../utils" }
