[package]
  authors = { workspace = true }
  edition = { workspace = true }
  name    = "day-05"
  version = { workspace = true }

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  anyhow = "1.0.66"
  nom    = { version = "7.1.1", features = ["alloc"] }
  utils  = { path = "../utils" }
