[package]
	authors = { workspace = true }
	edition = { workspace = true }
	name    = "day-16"
	version = { workspace = true }

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	advent-utils = { path = "../advent-utils" }
	anyhow       = "1.0.66"
	ndarray      = "0.15.6"
	nom          = "7.1.1"
