[package]
  authors = { workspace = true }
  edition = { workspace = true }
  name    = "day-21"
  version = { workspace = true }

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  advent-utils = { path = "../advent-utils" }
  num          = "0.4.0"
