[package]
  authors = { workspace = true }
  edition = { workspace = true }
  name    = "day-22"
  version = { workspace = true }

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  advent-utils = { path = "../advent-utils" }
  anyhow       = "1.0.66"
